# libworld2d

./: CMakeLists.txt  README.md
include/core/: entity.hpp  world.hpp
include/view/: item.hpp  scene.hpp
include/world/: entity.hpp  world.hpp
